nat_gateway.tf
resource "aws_eip" "nat_gateway_eip" {
  domain = "vpc"
  tags = {
    Name = "demo_nat_gateway_eip"
  }
}

resource "aws_nat_gateway" "nat_gateway" {
  allocation_id = aws_eip.nat_gateway_eip.id
  subnet_id     = aws_subnet.public_subnets["public_subnet_1"].id
  tags = {
    Name = "demo_nat_gateway"
  }
}
